# ranges-ext

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.serena/: project.yml
examples/: debug_demo.rs  key_demo.rs  overlap_demo.rs  slicevec_demo.rs
src/: alloc_ops.rs  core_ops.rs  heapless_impl.rs  heapless_ops.rs  helpers.rs  lib.rs  prelude.rs
tests/: alloc_tests.rs  boundary_tests.rs  common.rs  edge_cases.rs  potential_issues.rs  test.rs
